Color de fondo y letras

--- a/app/src/main/res/layout/activity_actividad2.xml
+++ b/app/src/main/res/layout/activity_actividad2.xml
@@ -5,27 +5,18 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo_chile"
     tools:context=".actividad_2">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="Empanadas"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
-
+    <!-- Recetas de Empanadas, Parrillas y Tragos -->
     <Button
         android:id="@+id/button"
         android:layout_width="268dp"
         android:layout_height="73dp"
         android:layout_marginBottom="88dp"
-        android:text="ver recetas de empanadas"
+        android:text="Ver recetas de empanadas"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#D52B1E"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +28,9 @@
         android:layout_width="267dp"
         android:layout_height="68dp"
         android:layout_marginBottom="92dp"
-        android:text="ver recetas de parrilla"
+        android:text="Ver recetas de parrilla"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#D52B1E"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,22 +41,41 @@
         android:layout_width="259dp"
         android:layout_height="71dp"
         android:layout_marginBottom="156dp"
-        android:text="ver recetas de tragos"
+        android:text="Ver recetas de tragos"
+        android:textColor="#FFFFFF"
+        android:backgroundTint="#D52B1E"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <!-- Textos de Empanadas, Parrillas y Tragos -->
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="Empanadas"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
         android:text="Parrilla"
+        android:textColor="#FFFFFF"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button2"
-        tools:layout_editor_absoluteX="150dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="20dp"/>
 
     <TextView
         android:id="@+id/textView3"
@@ -71,6 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="Tragos"
+        android:textColor="#FFFFFF"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button3"
