--- a/app/src/main/res/layout/activity_costillar_de_cerdo_parrilla.xml
+++ b/app/src/main/res/layout/activity_costillar_de_cerdo_parrilla.xml
@@ -8,55 +8,81 @@
     android:background="@drawable/fondo_chile"
     tools:context=".CostillarDeCerdoParrilla">
 
+    <!-- Botón Atrás -->
     <Button
         android:id="@+id/btnVerParrilla2"
         android:layout_width="102dp"
         android:layout_height="43dp"
         android:backgroundTint="#D52B1E"
-        android:text="Atras"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.051"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="30dp" />
-
-    <TextView
-        android:id="@+id/ingredientesCerdo"
-        android:layout_width="217dp"
-        android:layout_height="363dp"
-        android:text="Ingredientes:\n - 1 kilo de costillar de cerdo\n \n Adobo:\n - 3 1/2 cucharadas de miel\n - 3 cucharadas de mostaza\n - 3 cucharadas de vinagre blanco\n - 1 1/2 cucharadita de Ají Color Gourmet\n - 1/2 cucharadita de Comino Molido Gourmet\n - 2 cucharadas de Orégano Entero Gourmet\n - 1 cucharadita de Pimienta Blanca Gourmet\n - 1 1/2 cucharadita de Sal de Mar Gourmet\n - 3/4 taza de vino blanco\n "
-        android:textColor="@color/black"
-        android:textSize="16sp"
+        android:text="Atrás"
+        android:textColor="@android:color/white"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.927"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="131dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"/>
 
+    <!-- Título -->
     <TextView
         android:id="@+id/textView30"
-        android:layout_width="345dp"
-        android:layout_height="86dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="Costillar de Cerdo a la Parrilla"
         android:textColor="@color/white"
-        android:textSize="34sp"
+        android:textSize="26sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.181"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@id/btnVerParrilla2"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="82dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="12dp"/>
 
+    <!-- Imagen -->
+    <ImageView
+        android:id="@+id/imgAnticucho"
+        android:layout_width="165dp"
+        android:layout_height="204dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="16dp"
+        android:contentDescription="Imagen de costillar"
+        android:scaleType="centerCrop"
+        android:src="@drawable/costillas_de_cerdo"
+        app:layout_constraintTop_toBottomOf="@id/textView30"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <!-- Ingredientes -->
+    <TextView
+        android:id="@+id/ingredientesCerdo"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Ingredientes:\n - 1 kilo de costillar de cerdo\n \n Adobo:\n - 3 1/2 cucharadas de miel\n - 3 cucharadas de mostaza\n - 3 cucharadas de vinagre blanco\n - 1 1/2 cucharadita de Ají Color Gourmet\n - 1/2 cucharadita de Comino Molido Gourmet\n - 2 cucharadas de Orégano Entero Gourmet\n - 1 cucharadita de Pimienta Blanca Gourmet\n - 1 1/2 cucharadita de Sal de Mar Gourmet\n - 3/4 taza de vino blanco\n "
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:lineSpacingExtra="2dp"
+        app:layout_constraintTop_toBottomOf="@id/textView30"
+        app:layout_constraintStart_toEndOf="@id/imgAnticucho"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"/>
+
+    <!-- Preparación -->
     <TextView
         android:id="@+id/textView31"
-        android:layout_width="384dp"
-        android:layout_height="230dp"
-        android:layout_marginBottom="24dp"
-        android:text="Preparación:\n Mezclar todos los ingredientes del adobo en una fuente grande. Agregar el costillar y con las manos, embetunarlo por todos lados. Dejar reposar por al menos 2 horas antes de cocinarlo.\n \n Prender la parrilla y cuando esté caliente, sacar el costillar del adobo y ponerlo sobre la parrilla.\n \n Cocinar por ambos lados hasta que esté cocido al medio y dorado por ambos lados; alrededor de 45 minutos; se puede pincelar con el adobo mientras se cocina.\n \n Partir y servir acompañado de ensalada chilena.\n "
-        android:textAlignment="viewStart"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="Preparación:\n Mezclar todos los ingredientes del adobo en una fuente grande. Agregar el costillar y con las manos, embetunarlo por todos lados. Dejar reposar por al menos 2 horas antes de cocinarlo.\n\n Prender la parrilla y cuando esté caliente, sacar el costillar del adobo y ponerlo sobre la parrilla.\n\n Cocinar por ambos lados hasta que esté cocido al medio y dorado por ambos lados; alrededor de 45 minutos; se puede pincelar con el adobo mientras se cocina.\n\n Partir y servir acompañado de ensalada chilena."
         android:textColor="@color/black"
         android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:lineSpacingExtra="3dp"
+        app:layout_constraintTop_toBottomOf="@id/imgAnticucho"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.481"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
