--- a/app/src/main/res/layout/activity_empanada_de_queso.xml
+++ b/app/src/main/res/layout/activity_empanada_de_queso.xml
@@ -8,56 +8,61 @@
     android:background="@drawable/fondo_chile"
     tools:context=".EmpanadaDeQueso">
 
+    <!-- Boton Atras -->
     <Button
         android:id="@+id/btnRecetasEmpanadas"
         android:layout_width="102dp"
         android:layout_height="43dp"
         android:backgroundTint="#D52B1E"
-        android:text="Atras"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.051"
+        android:text="Atrás"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="30dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"/>
 
-    <TextView
-        android:id="@+id/IngredientesEQueso"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ingredientes:\n - 1 kilo de harina\n -120 gr de manteca o margarina\n - 1 cucharadita de Sal de Mar\n - 1 cucharadita de azucar\n - 1 taza de leche\n - 1 taza de agua\n - 200 gr de queso mantecoso\n - Aceite"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.898"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="184dp" />
-
+    <!-- Titulo -->
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Empanada de Queso"
         android:textColor="@color/white"
-        android:textSize="34sp"
+        android:textSize="28sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintTop_toBottomOf="@id/btnRecetasEmpanadas"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="106dp" />
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"/>
 
+    <!-- Imagen -->
+    <ImageView
+        android:id="@+id/imgEmpanada"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:contentDescription="Imagen de empanada de queso"
+        android:scaleType="centerCrop"
+        android:src="@drawable/empanada_de_queso"
+        app:layout_constraintTop_toBottomOf="@id/textView8"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <!-- Ingredientes -->
     <TextView
-        android:id="@+id/textView9"
-        android:layout_width="375dp"
-        android:layout_height="313dp"
-        android:layout_marginBottom="28dp"
-        android:text="Preparar la masa: Mezclar harina con manteca, sal, azúcar y leche. Agregar agua poco a poco hasta formar una masa lisa. Amasar, tapar y dejar reposar 30 minutos.\n \nArmar las empanadas: Estirar la masa a 0,3 cm, cortar círculos de 10 cm, poner un cubo de queso al centro y cerrar en forma de media luna, sellando los bordes con un tenedor.\n \nFreír: Cocinar en aceite caliente hasta que estén doradas por ambos lados. Escurrir en papel absorbente.\n \nServir: Consumir de inmediato, opcionalmente espolvorear con azúcar flor."
+        android:id="@+id/IngredientesEQueso"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Ingredientes:\n - 1 kilo de harina\n - 120 gr de manteca o margarina\n - 1 cucharadita de Sal de Mar\n - 1 cucharadita de azúcar\n - 1 taza de leche\n - 1 taza de agua\n - 200 gr de queso mantecoso\n - Aceite"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imgEmpanada"
+        app:layout_constraintStart_toEndOf="@id/imgEmpanada"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="20dp"/>
 
+    <!-- Texto "Preparación:" -->
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
@@ -66,9 +71,24 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintTop_toBottomOf="@id/imgEmpanada"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="355dp" />
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"/>
+
+    <!-- Preparación -->
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="Preparar la masa: Mezclar harina con manteca, sal, azúcar y leche. Agregar agua poco a poco hasta formar una masa lisa. Amasar, tapar y dejar reposar 30 minutos.\n\nArmar las empanadas: Estirar la masa a 0,3 cm, cortar círculos de 10 cm, poner un cubo de queso al centro y cerrar en forma de media luna, sellando los bordes con un tenedor.\n\nFreír: Cocinar en aceite caliente hasta que estén doradas por ambos lados. Escurrir en papel absorbente.\n\nServir: Consumir de inmediato, opcionalmente espolvorear con azúcar flor."
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/textView10"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
